--- a/Views/Home/Gallery.cshtml
+++ b/Views/Home/Gallery.cshtml
@@ -2,6 +2,11 @@
     For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
 *@
 @{
+    ViewData["Main_Title"] = ViewLocalize["Main_Title"];
+    ViewData["Description_Title"] = ViewLocalize["Description_Title"];
+    ViewData["Gallery_Title"] = ViewLocalize["Gallery_Title"];
+    ViewData["Contact_us"] = ViewLocalize["Contact_us"];
+    ViewData["Phone"] = ViewLocalize["Phone"];
 }
 
 
@@ -87,7 +92,7 @@
                     </a>
                 </div>
             </div>
-	    <div class="col-sm-6 col-md-4">
+	        <div class="col-sm-6 col-md-4">
                 <div class="thumbnail">
                     <a class="lightbox" href="img/IMG_7949.JPG">
                         <img src="img/IMG_7949.JPG">
