--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -1,4 +1,18 @@
-﻿<!DOCTYPE html>
+﻿@using Microsoft.AspNetCore.Builder
+@using Microsoft.AspNetCore.Localization
+@using Microsoft.Extensions.Options
+ 
+@inject IOptions<RequestLocalizationOptions> LocOptions
+ 
+@{
+    string returnUrl = ViewContext.HttpContext.Request.Path;
+ 
+    var requestCulture = Context.Features.Get<IRequestCultureFeature>();
+    var cultureItems = LocOptions.Value.SupportedUICultures
+        .Select(c => new SelectListItem { Value = c.Name, Text = c.DisplayName })
+        .ToList();
+}
+<!DOCTYPE html>
 <html>
     <head>
         <meta http-equiv="content-type" content="text/html; charset=UTF-8">
@@ -6,20 +20,20 @@
 
         <title>Crux Avstralis</title>
 
-        <link rel="stylesheet" href="fontawesome-free-5.15.2-web/css/all.css">
-        <link rel="stylesheet" href="css/menu.css">
-        <link rel="stylesheet" href="css/box.css">
-        <link rel="stylesheet" href="css/photo.css">
-        <link href="/assets/css/demo-template.css" rel="stylesheet" >
+        <link rel="stylesheet" href="~/fontawesome-free-5.15.2-web/css/all.css">
+        <link rel="stylesheet" href="~/css/menu.css">
+        <link rel="stylesheet" href="~/css/box.css">
+        <link rel="stylesheet" href="~/css/photo.css">
+        <link href="~/assets/css/demo-template.css" rel="stylesheet" >
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css" >
 
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
         <link href="https://fonts.googleapis.com/css?family=Droid+Sans:400,700" rel="stylesheet">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/baguettebox.js/1.8.1/baguetteBox.min.css">
-        <link rel="stylesheet" href="thumbnail-gallery.css">
+        <link rel="stylesheet" href="~/thumbnail-gallery.css">
 
-        <script type="text/javascript" src="/assets/js/jquery-1.10.2.js"></script>
-        <script type="text/javascript" src="https://bootstraptema.ru/snippets/slider/2016/flexslider/jquery.mousewheel.js"></script>
+        <script type="~/text/javascript" src="/assets/js/jquery-1.10.2.js"></script>
+        <script type="~/text/javascript" src="https://bootstraptema.ru/snippets/slider/2016/flexslider/jquery.mousewheel.js"></script>
         <script src="https://bootstraptema.ru/snippets/slider/2016/cbpFWSlider/cbpFWSlider.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/js/bootstrap.min.js"></script>
@@ -35,29 +49,42 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="/">Главная</a>
+                <a class="navbar-brand" href="/">@ViewData["Main_Title"]</a>
             </div>
  
 
  <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="dropdown-thumbnail-preview">
                 <ul class="nav navbar-nav">
-                    <li><a href="/Home/Description">Описание</a></li>
-                    <li><a href="/Home/Gallery">Фотографии</a></li>
+                    <li><a href="/Home/Description">@ViewData["Description_Title"]</a></li>
+                    <li><a href="/Home/Gallery">@ViewData["Gallery_Title"]</a></li>
 
                     <li class="dropdown">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">Связаться с нами<span class="caret"></span></a>
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">@ViewData["Contact_us"]<span class="caret"></span></a>
                         <ul class="dropdown-menu" role="menu">
-                            <li><a href="tel:+380 (50) 351 53 29">Телефон:+380 (50) 351 53 29</a></li>
+                            <li><a href="tel:+380 (50) 351 53 29">@ViewData["Phone"] +380 (50) 351 53 29</a></li>
                             <li><a href="/instagram"><i style="color:#ff0066; font-weight: bold;" class="fab fa-instagram"></i> Instagram</a></li>
                             <li><a href="viber://chat?number=%2B380 (50) 351 53 29"><i  style="color:purple" class="fab fa-viber">  Viber</i> +380 (50) 351 53 29 </a></li>                            
                         </ul>
                     </li>
+                    
+                   <li class="nav-item">
+                        <form asp-action="ChangeLanguage" asp-controller="Home" method="post">   
+                            <input type="hidden" id="returnUrl" name="returnUrl" value="@returnUrl" />
+                                <select id="culture"
+                                    name="culture"
+                                    onchange="this.form.submit();"
+                                    class="form-control"
+                                    asp-items="cultureItems"
+                                    asp-for="@requestCulture.RequestCulture.UICulture.Name">
+                                </select>
+                        </form>
+                    </li>
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
-                    <li><a>Телефон: +380 (50) 351 53 29</a></li>
+                    <li><a>@ViewData["Phone"] +380 (50) 351 53 29</a></li>
                 </ul>
-
+                
             </div> 
        </div>
     </nav> 
