Add img file to project

--- a/Views/Home/Description.cshtml
+++ b/Views/Home/Description.cshtml
@@ -2,11 +2,15 @@
     For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
 *@
 @{
-    ViewData["Main_Title"] = ViewLocalize["Main_Title"];
-    ViewData["Description_Title"] = ViewLocalize["Description_Title"];
-    ViewData["Gallery_Title"] = ViewLocalize["Gallery_Title"];
+    ViewData["Path_First_Title"] = "/";
+    ViewData["Path_Second_Title"] = "/Home/Gallery";
+    ViewData["Path_TitlePage"] = "/Home/Description";
+    ViewData["TitlePage"] = ViewLocalize["Description_Title"];
+    ViewData["First_Title"] = ViewLocalize["Main_Title"];
+    ViewData["Second_Title"] = ViewLocalize["Gallery_Title"];
     ViewData["Contact_us"] = ViewLocalize["Contact_us"];
     ViewData["Phone"] = ViewLocalize["Phone"];
+    
 }
 
 <div class="container gallery-container">
