--- a/Views/Home/Gallery.cshtml
+++ b/Views/Home/Gallery.cshtml
@@ -2,13 +2,16 @@
     For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
 *@
 @{
-    ViewData["Main_Title"] = ViewLocalize["Main_Title"];
-    ViewData["Description_Title"] = ViewLocalize["Description_Title"];
-    ViewData["Gallery_Title"] = ViewLocalize["Gallery_Title"];
+    ViewData["Path_First_Title"] = "/";
+    ViewData["Path_Second_Title"] = "/Home/Description";
+    ViewData["Path_TitlePage"] = "/Home/Gallery";
+    ViewData["TitlePage"] = ViewLocalize["Gallery_Title"];
+    ViewData["First_Title"] = ViewLocalize["Main_Title"];
+    ViewData["Second_Title"] = ViewLocalize["Description_Title"];
     ViewData["Contact_us"] = ViewLocalize["Contact_us"];
     ViewData["Phone"] = ViewLocalize["Phone"];
+    
 }
-
 
 <div class="container gallery-container">
     <div class="tz-gallery">
@@ -16,7 +19,7 @@
             <div class="col-sm-6 col-md-4">
                 <div class="thumbnail">
                     <a class="lightbox" href="img/IMG_8042.JPG">
-                        <img src="img/IMG_8042.JPG">
+                        <img src="~/img/IMG_8042.JPG">
                     </a>
                 </div>
             </div>
