--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -2,18 +2,22 @@
     For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
 *@
 @{
-    ViewData["Main_Title"] = ViewLocalize["Main_Title"];
-    ViewData["Description_Title"] = ViewLocalize["Description_Title"];
-    ViewData["Gallery_Title"] = ViewLocalize["Gallery_Title"];
+    ViewData["Path_First_Title"] = "/Home/Description";
+    ViewData["Path_Second_Title"] = "/Home/Gallery";
+    ViewData["Path_TitlePage"] = "/";
+    ViewData["TitlePage"] = ViewLocalize["Main_Title"];
+    ViewData["First_Title"] = ViewLocalize["Description_Title"];
+    ViewData["Second_Title"] = ViewLocalize["Gallery_Title"];
     ViewData["Contact_us"] = ViewLocalize["Contact_us"];
     ViewData["Phone"] = ViewLocalize["Phone"];
+    
 }
 
 
 <div style="position:absolute; text-align:center;" widht="10px">
 	
 	
-    <img style="text-align:center;"  src="img/test.png" width="100%">
+    <img style="text-align:center;"  src="img/IMG_7941.JPG" width="100%">
 	
     <div style="text-align:center;" class="title_main">
 	    <h2><i class="fab fa-watchman-monitoring"></i>@ViewLocalize["TitleOfName"] </h2> 
