--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -49,15 +49,15 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="/">@ViewData["Main_Title"]</a>
+                <a class="navbar-brand" href=@ViewData["Path_TitlePage"]>@ViewData["TitlePage"]</a>
             </div>
  
 
  <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="dropdown-thumbnail-preview">
                 <ul class="nav navbar-nav">
-                    <li><a href="/Home/Description">@ViewData["Description_Title"]</a></li>
-                    <li><a href="/Home/Gallery">@ViewData["Gallery_Title"]</a></li>
+                    <li><a href=@ViewData["Path_First_Title"]>@ViewData["First_Title"]</a></li>
+                    <li><a href=@ViewData["Path_Second_Title"]>@ViewData["Second_Title"]</a></li>
 
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">@ViewData["Contact_us"]<span class="caret"></span></a>
@@ -68,7 +68,11 @@
                         </ul>
                     </li>
                     
-                   <li class="nav-item">
+                   
+                </ul>
+                <ul class="nav navbar-nav navbar-right">
+                    <li><a>@ViewData["Phone"] +380 (50) 351 53 29</a></li>
+                    <li class="nav-item">
                         <form asp-action="ChangeLanguage" asp-controller="Home" method="post">   
                             <input type="hidden" id="returnUrl" name="returnUrl" value="@returnUrl" />
                                 <select id="culture"
@@ -80,9 +84,6 @@
                                 </select>
                         </form>
                     </li>
-                </ul>
-                <ul class="nav navbar-nav navbar-right">
-                    <li><a>@ViewData["Phone"] +380 (50) 351 53 29</a></li>
                 </ul>
                 
             </div> 
