--- a/Views/Home/Description.cshtml
+++ b/Views/Home/Description.cshtml
@@ -19,27 +19,20 @@
             <div class="col-sm-6 col-md-4">
                 <div class="thumbnail">
 	                <div class="title_main">
-	                    <h3><i class="fas fa-ship"></i>На судне</h3>
+	                    <h3><i class="fas fa-ship"></i>@ViewLocalize["OnTheBoat"]</h3>
                     </div>
 	                <p>
-                        - салон внутри (кают-компания) на 10 человек<br>
-	                    - 4 двухспальных кают + 1 каюта команды<br>
-	                    - кухня (камбуз)<br>
-	                    - летний душ в корме на палубе<br>
-	                    - 2 санузла
+                        @ViewLocalize["DescriptionOnTheBoat"]
                     </p>
                 </div>
             </div>     
             <div class="col-sm-6 col-md-4">
                 <div class="thumbnail">
 	                <div class="title_main">
-	                    <h3><i class="fas fa-server"></i>Оборудование</h3>
+	                    <h3><i class="fas fa-server"></i>@ViewLocalize["Equipment"]</h3>
                     </div>
 	                <p>
-                        - деревянная палуба<br>
-		                - тент в кокпите<br>
-		                - резиновая лодка<br>
-		                - музыкального оборудования нет
+                        @ViewLocalize["DescriptionEquipment"]
                     </p>
                 </div>
             </div>
@@ -47,32 +40,27 @@
                 <div class="thumbnail">
                 
 	                <div class="title_main">
-	                    <h3><i class="fas fa-drafting-compass"></i>Характеристики</h3>
+	                    <h3><i class="fas fa-drafting-compass"></i>@ViewLocalize["Characteristics"] </h3>
                     </div>
                     <p>
-                        - длина: 16.7 м<br>
-		                - ширина: 5.4 м<br>
-		                - осадка: 2.2 м<br>
-		                - высота мачты: 20 м<br>
-		                - мощность двигателя: 128 л.с.
+                        @ViewLocalize["DescriptionCharacteristics"]
                     </p>
                 </div>
             </div>
             <div class="col-sm-6 col-md-4">
                 <div class="thumbnail">
 	                <div class="title_main">
-	                    <h3><i class="fas fa-exclamation-triangle"></i>Важаная информация</h3>
+	                    <h3><i class="fas fa-exclamation-triangle"></i>@ViewLocalize["Important_Information"]</h3>
                     </div>
-	                <p>Возьмите с собой сменную обувь без каблуков с мягкой немаркой нескользящей подошвой<br> (кроксы, мокасины, кеды или можно босиком). </p>
+	                <p>@ViewLocalize["DescriptionImportant_Information"]</p>
                 </div>
             </div>
             <div class="col-sm-6 col-md-4">
                 <div class="thumbnail">
 	                <div class="title_main">
-	                    <h3><i class="far fa-list-alt"></i>Описание</h3>
+	                    <h3><i class="far fa-list-alt"></i>@ViewLocalize["Description"]</h3>
                     </div>
-	                <p>Элегантная яхта «Австралия» — лучший выбор для ценителей высокого класса. Судно VIP-категории<br> идеально подходит для представительских<br> целей и станет отличным вариантом для деловых переговоров в приватной обстановке на 10 гостей.<br> Экологичное покрытие палубы из древесины тика — роскошный фон для элитной фотосессии.
-                    Просторный салон яхты «Австралия»<br> выдержан в натуральных сдержанных цветах,<br> удобный полукруглый диван вокруг стола позволит<br> гостям чувствовать себя равноправными, что способствует доверительной тёплой атмосфере. 4 комфортабельные каюты обеспечат релакс.</p>
+	                <p>@ViewLocalize["DescriptionYacht"]</p>
                 </div>
             </div>
         </div>
