--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -18,7 +18,10 @@
         <meta http-equiv="content-type" content="text/html; charset=UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-        <title>Crux Avstralis</title>
+        <title>Crux Australis</title>
+
+        <link rel = "icon" href = "/img/main.ico" 
+        type = "image/x-icon">
 
         <link rel="stylesheet" href="~/fontawesome-free-5.15.2-web/css/all.css">
         <link rel="stylesheet" href="~/css/menu.css">
