--- a/Views/Home/Description.cshtml
+++ b/Views/Home/Description.cshtml
@@ -13,7 +13,7 @@
     
 }
 
-<div class="container gallery-container">
+<div class="container gallery-container">ч
     <div class="tz-gallery">
         <div class="row">
             <div class="col-sm-6 col-md-4">
