--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -17,7 +17,7 @@
 <div style="position:absolute; text-align:center;" widht="10px">
 	
 	
-    <img style="text-align:center;"  src="img/IMG_7941.JPG" width="100%">
+    <img style="text-align:center;"  src="~/img/IMG_7941.JPG" width="100%">
 	
     <div style="text-align:center;" class="title_main">
 	    <h2><i class="fab fa-watchman-monitoring"></i>@ViewLocalize["TitleOfName"] </h2> 
