--- a/Views/Home/Description.cshtml
+++ b/Views/Home/Description.cshtml
@@ -1,7 +1,4 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
-@{
+﻿@{
     ViewData["Path_First_Title"] = "/";
     ViewData["Path_Second_Title"] = "/Home/Gallery";
     ViewData["Path_TitlePage"] = "/Home/Description";
@@ -13,7 +10,7 @@
     
 }
 
-<div class="container gallery-container">ч
+<div class="container gallery-container">
     <div class="tz-gallery">
         <div class="row">
             <div class="col-sm-6 col-md-4">
